Update gallery paragraph twig fiels and prettify

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.twig
@@ -3,43 +3,43 @@
 #}
 
 {{ gallery_instructions }} 
-{% block plGalleryStart %}
-    <div class="paragraph--gallery">
+{% block widgetopen %}
+   <div class="paragraph--gallery">
 {% endblock %}
 
 {% block galleryContent %}
 
-    {% if widget_title %}
-        <div class="widget-title">{{widget_title}}</div>
-    {% endif %}
+  {% if widget_title %}
+     <div class="widget-title">{{widget_title}}</div>
+  {% endif %}
 
-    <div class="gallery-type {{gallery_type}}" >
-        <div class="gallery-wrapper">
+  <div class="gallery-type {{gallery_type}}" >
+    <div class="gallery-wrapper">
 
-            {% if 'Lightbox' in gallery_type %}
-                {% block lightboxContent %}
-                    {% for image in images %}
-                        <div class="featherlight-gal image-gal" href="#item{{image.id}}">
-                            <img src="{{image.src}}" />
-                            <div class="featherlight-hidden" id="item{{image.id}}">
-                                <img src="{{image.src}}" />
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endblock %}
-            {% else %}
-                {% block sliderContent %}
-                    {% for image in images %}
-                        <div class="slider-image"><img src="{{ image.src }}"></div>
-                    {% endfor %}
-                {% endblock %}
-            {% endif %}
+      {% if 'Lightbox' in gallery_type %}
+        {% block lightboxContent %}
+          {% for image in images %}
+            <div class="featherlight-gal image-gal" href="#item{{image.id}}">
+                <img src="{{image.src}}" />
+                <div class="featherlight-hidden" id="item{{image.id}}">
+                    <img src="{{image.src}}" />
+                </div>
+            </div>
+          {% endfor %}
+        {% endblock %}
+      {% else %}
+        {% block sliderContent %}
+          {% for image in images %}
+              <div class="slider-image"><img src="{{ image.src }}"></div>
+          {% endfor %}
+        {% endblock %}
+      {% endif %}
 
-        </div> {# end gallery-wrapper #}
-    </div> {# end gallery-type #}
+    </div> {# end gallery-wrapper #}
+  </div> {# end gallery-type #}
 
 {% endblock %}
 
-{% block plGalleryEnd %}
-    </div>
+{% block plwidgetclose  %}
+   </div>
 {% endblock %}
