--- a/web/themes/citizen_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
@@ -40,34 +40,37 @@
 {% extends "paragraph.html.twig" %}
 
 {% block widgetContent %}
-    {{ attach_library('citizen_patterns/galleries') }}
-    {% embed "@organisms/00-paragraphs/gallery/gallery.twig"
-        with{
-            gallery_type: content.field_gallery_type.0['#markup'],
-			widget_title: content.field_widget_title.0['#context'].value
-        }
-    %}
+  {{ attach_library('citizen_patterns/galleries') }}
+  {% embed "@organisms/00-paragraphs/gallery/gallery.twig"
+    with{
+      gallery_type: content.field_gallery_type.0['#markup'],
+		  widget_title: content.field_widget_title.0['#context'].value
+    }
+  %}
+    {% block plwidgetopen %}{# remove pl only structure #}{% endblock %}
 
-        {% block lightboxContent %}
-            {{ attach_library('citizen_patterns/featherlight') }}
-            {%- for key, item in content.field_image_multi if key|first != '#' -%}
-                {%- if paragraph.field_image_multi[key].target_id > 0 -%}
-                    <div class="featherlight-gal image-gal" href="#item{{paragraph.field_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">
-                        {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large_thumb') }}
-                        <div class="featherlight-hidden" id="item{{paragraph.field_image_multi[key].target_id}}">
-                            {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large') }}
-                        </div>
-                    </div>
-                {%- endif -%}
-            {%- endfor -%}
-        {% endblock %}
-
-        {% block sliderContent %}
-            {{ attach_library('citizen_patterns/slick') }}
-            <div class="paragraph paragraph--type--slideshow">
-        	   {{- content.field_image_multi -}}
+    {% block lightboxContent %}
+      {{ attach_library('citizen_patterns/featherlight') }}
+      {%- for key, item in content.field_image_multi if key|first != '#' -%}
+        {%- if paragraph.field_image_multi[key].target_id > 0 -%}
+          <div class="featherlight-gal image-gal" href="#item{{paragraph.field_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">
+            {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large_thumb') }}
+            <div class="featherlight-hidden" id="item{{paragraph.field_image_multi[key].target_id}}">
+                {{ drupal_entity('media', paragraph.field_image_multi[key].target_id, 'large') }}
             </div>
-        {% endblock %}
+          </div>
+        {%- endif -%}
+      {%- endfor -%}
+    {% endblock %}
 
-    {% endembed %}
+    {% block sliderContent %}
+      {{ attach_library('citizen_patterns/slick') }}
+      <div class="paragraph paragraph--type--slideshow">
+  	   {{- content.field_image_multi -}}
+      </div>
+    {% endblock %}
+
+    {% block plwidgetclose %}{# remove pl only structure #}{% endblock %}
+
+  {% endembed %}
 {% endblock %}
