Finihs up galliers ticket

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/gallery.twig
@@ -3,7 +3,7 @@
 #}
 
 {{ gallery_instructions }} 
-{% block widgetopen %}
+{% block plwidgetopen %}
    <div class="paragraph--gallery">
 {% endblock %}
 
