--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
@@ -81,7 +81,7 @@
 }//end drupal canvas
 
 form.layout-builder-revert-overrides{
-	padding: 0 2rem;
+	padding: 0 0 $siteBottomSpace;
 	max-width: $contentStop;
 	@include auto;
 	.form-actions{
