--- a/web/themes/citizen_patterns/components/_patterns/04-elements/content-types/blog-post/_blog-post.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-elements/content-types/blog-post/_blog-post.scss
@@ -11,7 +11,9 @@
 	.block-field-banner{
 		opacity: 0;
 		@include animation('fadeIn 1.2s 1 forwards');
-		@include edgeToEdge;
+		body:not(.path-taxonomy) &{
+			@include edgeToEdge;
+		}
 		.field-banner{
 			position: relative;
 			@include tab{
