--- a/web/themes/citizen_patterns/components/_patterns/04-elements/_system-pages.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-elements/_system-pages.scss
@@ -1,7 +1,7 @@
 /* ============
    PAGES GLOBAL
 =============== */
-html > body:not(.is-front):not(.path-node):not(.node-type-page){
+html > body:not(.is-front):not(.path-node){
 	.layout-content{
 		max-width: $contentStop + 40px;
 		@include auto;
