--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
@@ -17,6 +17,9 @@ body {
 	&.unpublished{
 		background: $unpub;
 	}
+	.dialog-off-canvas-main-canvas > .layout-container{
+		padding-top: 0;
+	}
 }//end body
 
 .container-inline div{
