--- a/web/themes/citizen_patterns/components/_patterns/00-base/fonts/_font-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/fonts/_font-vars.scss
@@ -1,11 +1,21 @@
-///font families
+/* ====================
+   FONT VARIABLES
+==================== */
+
+/*  FAMILIES
+-------------------- */
 $header      : "Open Sans", Helvetica, Arial, sans-serif;
 $displayHeader      : "Open Sans", Helvetica, Arial, sans-serif;
 $bodyFont         : "Open Sans", Helvetica, Arial, sans-serif;
 $serif        : Georgia, "Times New Roman", Times, serif;
 
-//font weights
+/*  FAMILIES
+-------------------- */
 $light: 300;
 $regular: 400;
 $heavy:  700;
 $x-heavy: 900;
+
+/*  SIZES
+-------------------- */
+$baseSize: 1.8rem;
