Fix WYSIWYG media and buttons

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -15,8 +15,10 @@ $breadCurrent      : $darkGrey;
 $highlighter       : $brightYellow;
 $buttonBack        : $link;
 $buttonBackHover   : $hoverLink;
+$buttonBackActive  : darken($hoverLink, 5%);
 $buttonText        : $white;
 $buttonTextHover   : $white;
+$buttonTextActive  : $white;
 $submitBack        : $link;
 $submitText        : $white;
 $submitBackHover   : $grey;
