--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/media/_media.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/media/_media.scss
@@ -13,17 +13,17 @@ img{
 }
 
 //constrain images with smaller sizes (commonly embedded)
-	width: 320px;
-	max-width: 100%;
+.view-modemediasmall-embed{
+	max-width: 400px;
 }
 .view-modemediamedium-embed{
-	max-width: 460px;
+	max-width: 600px;
 }
 .view-modemediasquare{
-	max-width: 350px;
+	max-width: 400px;
 }
 .view-modemedialarge-embed{
-	max-width: 800px;
+	max-width: 900px;
 }
 
 /* MEDIA IN WYSIWYG 
@@ -37,6 +37,9 @@ img{
 			float: right;
 			margin-left: 2rem;
 			max-width: 50%;
+			&.has-video{
+				width: 100%;
+			}
 		}
 	}
 	&.left{
@@ -44,6 +47,9 @@ img{
 			float: left;
 			margin-right: 2rem;
 			max-width: 50%;
+			&.has-video{
+				width: 100%;
+			}
 		}
 	}
 	&.center{
