--- a/web/themes/citizen_patterns/components/css/cke.css
+++ b/web/themes/citizen_patterns/components/css/cke.css
@@ -30,12 +30,30 @@ html {
 
 .media--view-mode-small-embed{
 	width: 300px;
+	max-width: 100%;
 }
 .media--view-mode-medium-embed{
+	max-width: 100%;
 	width: 500px;
 }
 .media--view-mode-large-embed{
+	max-width: 100%;
 	width: 800px;
+}
+
+.field--name-field-media-video-embed-field .video-embed-field-responsive-video{
+	position: relative;
+	padding-bottom: 56.25%;	
+}
+.field--name-field-media-video-embed-field .video-embed-field-responsive-video iframe{
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
 }
 
 span.highlight{
@@ -54,12 +72,19 @@ small{
 }
 
 div.button{
-	display: block;
 	text-align: center;
-	margin: 2rem auto;
+	margin: 2rem 0;
+	display: inline-block;
+	vertical-align: top;
+	max-width: 260px;
+	text-align: center;
+	box-sizing: border-box;
+}
+div.button + div.button{
+	margin-left: 2rem;
 }
 div.button a{
-	display: inline-block;
+	display: block;
 	max-width: 260px;
 	color: #fff;
 	background: #bf0e0e;
