Upgrade search highlight

--- a/web/themes/citizen_patterns/templates/zzz-custom/search/views-view--site-search--search-results.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/search/views-view--site-search--search-results.html.twig
@@ -37,6 +37,7 @@
 		view.current_display|clean_class
 	]
 %}
+{{ attach_library('citizen_patterns/search-page') }}
 <div{{ attributes.addClass(classes) }}>
 	<h1>Site Search</h1>
 	
