--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
@@ -101,6 +101,7 @@
 	@include button;
 	background: $submitBack;
 	color: $submitText;
+	padding: 0 3rem;
 	height: 43px;
 	&:hover,&:focus{
 		background: $submitBackHover;
@@ -114,6 +115,7 @@
 	background: $resetBack;
 	color: $resetText;
 	border-color: $resetBack;
+	padding: 0 3rem;
 	height: 43px;
 	&:hover,&:focus{
 		background: $resetBackHover;
