--- a/web/themes/citizen_patterns/components/_patterns/04-elements/_search.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-elements/_search.scss
@@ -57,6 +57,16 @@
 				&:not(:last-child){
 					margin-bottom: $elementSpace;
 				}
+				.views-field-title{
+					.search-highlight{
+						text-shadow: 1px 1px 2px rgba(35,35,35,0.4);
+					}
+				}
+				.views-field-body-1{
+					.search-highlight{
+						font-weight: $heavy;
+					}
+				}
 			}
 		}//site-search
 	}//layout content
