--- a/web/themes/citizen_patterns/templates/zzz-custom/dataset/table.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/dataset/table.html.twig
@@ -39,7 +39,7 @@
  * @see template_preprocess_table()
  */
 #}
-
+{{ attach_library('citizen_patterns/table') }}
 <table{{ attributes }}>
   {% if caption %}
     <caption>{{ caption }}</caption>
