--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/00-text/_text.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/00-text/_text.scss
@@ -99,7 +99,7 @@ strong{
 	font-weight: $heavy;
 }
 
-figcaption {
+figcaption,.field-caption {
 	text-align: center;
 	font-size: 1.5rem;
 	font-style: italic;
