--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/media/_media.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/media/_media.scss
@@ -8,7 +8,7 @@ img{
 	display: block;
 }
 
-.field-media-image + figcaption{
+.field-media-image + figcaption,.field-media-image + .field-caption{
 	margin-top: $spaceXs;
 }
 
