--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/_gallery.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/gallery/_gallery.scss
@@ -113,7 +113,7 @@
 		img {
 			display: block;
 		}
-		figcaption {
+		figcaption,.field-caption {
 			position: absolute;
 			bottom: 0;
 			left: 0;
