--- a/web/themes/citizen_patterns/components/css/cke.css
+++ b/web/themes/citizen_patterns/components/css/cke.css
@@ -102,7 +102,7 @@ table th, table td{
 	padding: 2px 6px;
 }
 
-.field--name-field-caption{
+.field-caption{
 	font-style: italic;
 	font-size: 13px;
 	text-align: center;
