User dashboard improvements

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
@@ -25,6 +25,7 @@
 		color: $buttonTextHover;
 		background-color: $buttonBackHover;
 		@include transAll(.3s);
+		text-decoration: none;
 	}
 	&:active{
 		color: $buttonTextActive;
