--- a/web/themes/citizen_patterns/components/_patterns/04-elements/_user-dashboard.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-elements/_user-dashboard.scss
@@ -2,6 +2,52 @@
    USER DASHBOARD
 =============== */
 
+/* TOUR */
+.user-tour{
+	display: none;
+	position: fixed;
+	top: 20%;
+	right: 0;
+	z-index: 999;
+	width: 240px;
+	background: $black;
+	padding: 30px 20px;
+	color: $white;
+	box-shadow: -8px 8px 16px rgba(35,35,35,0.2);
+	h2{
+		font-size: 2.2rem;
+		margin-bottom: $spaceMd;
+	}
+	p{
+		font-size: 1.6rem;
+		margin-bottom: $spaceSm;
+		a{
+			color: $transWhite;
+			text-decoration: underline;
+			&:hover,&:focus{
+				color: $white;
+				text-decoration: none;
+			}
+		}
+	}
+	@include onlySmall{
+		display: none !important;
+	}
+	.tour-close{
+		@include outlineButton($white);
+		font-size: 1.5rem;
+		padding: 1rem 1.5rem;
+		width: 100%;
+		max-width: 200px;
+		margin: 0 auto;
+		&:hover,&:focus{
+			background: $white;
+			color: $black;
+		}
+	}
+}//end user-tour
+
+/* DASHBOARD */
 article.user-dashboard{
 	margin-top: -$elementSpace;
 	margin-bottom: $spaceXl;
@@ -56,6 +102,7 @@ article.user-dashboard{
 			margin-bottom: $spaceXs;
 		}
 		.user-roles{
+			margin-bottom: $spaceSm;
 			span.role:not(:last-child){
 				margin-right: .7rem;
 				position: relative;
@@ -64,6 +111,9 @@ article.user-dashboard{
 					@include vertRule(right,80%,$borderRule);
 				}
 			}
+		}
+		.button-outline{
+			padding: .5rem 1.5rem;
 		}
 	}//end created
 
