--- a/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--created--user.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--created--user.html.twig
@@ -54,5 +54,6 @@
 		<span class="role">Editor</span>
 	{%- endif -%}
 </div>
+<a href="/user/logout" role="button" class="button-outline">Log Out</a>
 {% endblock %}
 
