Add node revision improvements

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -27,6 +27,10 @@ $resetBack         : $darkGrey;
 $resetText         : $white;
 $resetBackHover    : $grey;
 $resetTextHover    : $black;
+$cautionBack       : $midGrey;
+$cautionText       : $white;
+$cautionBackHover  : $grey;
+$cautionTextHover  : $black;
 
 /* SYSTEM
 --------------------- */
