--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
@@ -102,8 +102,9 @@
 	@include button;
 	background: $submitBack;
 	color: $submitText;
-	padding: 0 3rem;
+	padding: 1.25rem 3rem;
 	height: 43px;
+	line-height: 1;
 	&:hover,&:focus{
 		background: $submitBackHover;
 		border-color: $submitBackHover;
@@ -111,13 +112,23 @@
 	}
 }
 
+@mixin cautionButton{
+	@include submitButton;
+	background: $cautionBack;
+	color: $cautionText;
+	border-color: $cautionBack;
+	&:hover,&:focus{
+		background: $cautionBackHover;
+		border-color: $cautionBackHover;
+		color: $cautionTextHover;
+	}
+}
+
 @mixin resetButton{
-	@include button;
+	@include submitButton;
 	background: $resetBack;
 	color: $resetText;
 	border-color: $resetBack;
-	padding: 0 3rem;
-	height: 43px;
 	&:hover,&:focus{
 		background: $resetBackHover;
 		border-color: $resetBackHover;
@@ -125,12 +136,19 @@
 	}
 }
 
-//button class
+//button classes
 .button {
 	@include button;
 }
-
-//outlineButtons
+.button-submit{
+	@include submitButton;
+}
+.button-warning{
+	@include cautionButton;
+}
+.button-danger-robinson{
+	@include resetButton;
+}
 .button-outline{
 	@include outlineButton($link);
 }
