Upgrade to 8.7.6, add paragraph library to fix bug

--- a/web/themes/citizen_patterns/templates/zzz-custom/layout/node.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/layout/node.html.twig
@@ -100,7 +100,7 @@
 
   <div{{ content_attributes.addClass('main-node-content') }}>
     {%- if content._layout_builder -%}
-      {%- for layoutSection in content._layout_builder -%}
+      {%- for key, layoutSection in content._layout_builder if key|first != '#' -%}
         {% block layoutSectionContent %}
           <section id="section-{{ loop.index }}" class="node-section">
             {{- layoutSection -}}
