Add custom help text to layout builder

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -184,7 +184,7 @@ $accordHeaderBack         : $siteBack;
 $accordHeaderBackHover    : $darkGrey;
 $accordContentBack        : $siteBack;
 $accordContentBorder      : transparent;
-$accordActive             : $black;
+$accordActive             : $white;
 $accordActiveHover        : $white;
 $accordActiveBorder       : $black;
 $accordActiveBorderHover  : $darkGrey;
