Layout builder theming

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
@@ -124,7 +124,7 @@
 	}
 }
 
-@mixin resetButton{
+@mixin warningButton{
 	@include submitButton;
 	background: $resetBack;
 	color: $resetText;
@@ -147,7 +147,7 @@
 	@include cautionButton;
 }
 .button-danger-robinson{
-	@include resetButton;
+	@include warningButton;
 }
 .button-outline{
 	@include outlineButton($link);
