--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/filters/_08-views_exposed_filters.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/filters/_08-views_exposed_filters.scss
@@ -30,7 +30,7 @@
 				margin: 0px 10px;
 			}
 			&#edit-reset{
-				@include resetButton;
+				@include warningButton;
 				@include smallTab{
 					margin: 10px 0px;
 				}
