--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
@@ -5,7 +5,7 @@
 @mixin inputSelect{
 	width: 100%;
 	font-size: 1.6rem;
-	border: 1px solid $formElementBorder;
+	border: 2px solid $formElementBorder;
 	border-radius: 0;
 	height: auto;
 	&.select2--container--focus{
@@ -50,7 +50,7 @@ body .select2-container--default{
 		}
 		//rendered selection
 		.select2-selection__rendered{
-			padding: 4px 32px 4px 10px;
+			padding: 6px 32px 6px 10px;
 			color: $darkGrey;
 			text-align: left;
 		}
@@ -127,7 +127,8 @@ body .select2-container--default{
 		}
 
 		//multiple
-		.select2-selection--multiple{			
+		.select2-selection--multiple{		
+			border-width: 2px;	
 			.select2-search--inline{ 
 				&:after{
 					border-top: 0;
@@ -150,7 +151,7 @@ body .select2-container--default{
 ---------------- */
 .select2-container{
 	.select2-dropdown{
-		border: 1px solid $formElementBorder;
+		border: 2px solid $formElementBorder;
 		border-radius: 0;
 		border-top: 0;
 		padding: 0;
