--- a/web/themes/citizen_patterns/templates/zzz-custom/forms/select.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/forms/select.html.twig
@@ -10,6 +10,7 @@
  * @see template_preprocess_select()
  */
 #}
+{{ attach_library('citizen_patterns/select') }}
 {% spaceless %}
   <select{{ attributes }}>
     {% for option in options %}
