Fix menu block js library, make current page link inactive in menu block

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
@@ -49,6 +49,7 @@
 	padding: 8px 6px 9px;
 	width: 100%;
 	line-height: 1;
+	min-height: 44px;
 	@include placeholder;
 	&:focus{
 		@include placeholderFocus;
