--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/menus/menu-block/_menu-block.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/menus/menu-block/_menu-block.scss
@@ -69,9 +69,7 @@
 					}
 					&.is-active{
 						color: $menuTopActive;
-						&:hover,&:focus{
-							color: $menuTopActiveHover;
-						}
+						pointer-events: none;
 					}
 				}//end a
 				//parents
@@ -100,9 +98,6 @@
 						}
 						&.is-active{
 							color: $menuChildActive;
-							&:hover,&:focus{
-								color: $menuChildActiveHover;
-							}
 						}
 					}//end a
 				}//end child items
