Modal tweaks, remove media js

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -49,8 +49,8 @@ $modalContent              : $baseText;
 $modalContentBack          : $siteBack;
 $modalHeader               : $white;
 $modalHeaderBack           : $darkGrey;
-$modalHeaderClose          : $darkGrey;
-$modalHeaderCloseHover     : $midGrey;
+$modalHeaderClose          : $white;
+$modalHeaderCloseHover     : $grey;
 $modalGalButton            : $white;
 $modalGalButtonHover       : $white;
 $modalGalButtonBackHover   : rgba(255,255,255,0.15);
