Custom form elements

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -84,8 +84,9 @@ $checkBox                 : $link;
 $checkBoxHover            : $black;
 $checkBoxBackHover        : $transBlack;
 $checkBoxChecked          : darken($checkBox, 5%);
-$checkBoxCheckedBack      : $transBlack;
-$checkBoxCheckedBackHover : $black;
+$checkBoxCheckedHover     : darken($checkBox, 10%);
+$checkBoxCheckedBack      : $link;
+$checkBoxCheckedBackHover : lighten($checkBoxCheckedBack, 10%);
 $selectArrow              : $midGrey;
 $selectHighlight          : $link;
 
