--- a/web/themes/citizen_patterns/components/_patterns/00-base/macros.twig
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/macros.twig
@@ -29,18 +29,11 @@
 
 {#######  FORM VARIABLES  #######}
 <div class="macro-tile">
-<p><strong>Radio Form Elements</strong></br>
+<p><strong>Form Elements</strong></br>
 	VARIABLES= default, custom-options</br>
 </p>
 </div>
-{% macro radioElements() %}custom-options{% endmacro %}
-
-<div class="macro-tile">
-<p><strong>Checkbox Form Elements</strong></br>
-	VARIABLES= default, custom-options</br>
-</p>
-</div>
-{% macro checkboxElements() %}custom-options{% endmacro %}
+{% macro formElements() %}custom-options{% endmacro %}
 
 {#######  LAYOUT VARIABLES  #######}
 <div class="macro-tile">
